# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  ci.yml
src/gendiff/: __init__.py  build_diff.py  core.py  gendiff.py  parsers.py
src/gendiff/formatters/: json_formatter.py  plain.py  stylish.py
src/gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_gendiff_json.py
tests/fixtures/: file2.yaml
tests/tests_data/: expected_json.json
