[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = "CLI tool for comparing configuration files"
authors = ["Eugene Bell <sherifbea1@gmail.com>"]
readme = "README.md"
packages = [{ include = "gendiff", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-v --cov=gendiff --cov-report=xml"
testpaths = ["tests"]