[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI tool for comparing configuration files"
authors = ["Eugene Bell <sherifbea1@gmail.com>"]
readme = "README.md"
packages = [{ include = "gendiff", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-select = ["E", "F", "W"]

[tool.pytest.ini_options]
addopts = "-v --cov=gendiff --cov-report=xml"
testpaths = ["tests"]
